--- a/src/components/Finance.module.css
+++ b/src/components/Finance.module.css
@@ -32,7 +32,7 @@
 .currencyName {
     font-weight: bold;
     margin-right: 5px;
-    color: #495057;
+    color: #333333;
     font-size: 14px;
 }
 
@@ -40,6 +40,7 @@
     margin-right: 5px;
     color: #212529;
     font-size: 14px;
+    font-weight: bold;
 }
 
 .currencyChange {
@@ -48,11 +49,23 @@
 }
 
 .positive {
-    color: #28a745;
+    color: #00c781;
+}
+
+.positive::before {
+    content: "▲";
+    font-size: 8px;
+    margin-right: 2px;
 }
 
 .negative {
-    color: #dc3545;
+    color: #ff4040;
+}
+
+.negative::before {
+    content: "▼";
+    font-size: 8px;
+    margin-right: 2px;
 }
 
 .loading {
