--- a/src/components/MainSlider.module.css
+++ b/src/components/MainSlider.module.css
@@ -14,6 +14,8 @@
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
 }
 
 .slide.active {
@@ -24,6 +26,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .slideContent {
