--- a/src/components/RandomNews.module.css
+++ b/src/components/RandomNews.module.css
@@ -2,7 +2,7 @@
     background-color: white;
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    max-width: 350px;
+    width: 350px;
     margin: 0 auto 15px auto;
     overflow: hidden;
 }
