--- a/src/components/TopMenu.module.css
+++ b/src/components/TopMenu.module.css
@@ -5,10 +5,14 @@
     top: 0;
     width: 100%;
     z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*gap: 20px;*/
 }
 
 .menuContainer {
-    max-width: 1200px;
+    max-width: 1600px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -20,6 +24,7 @@
     padding: 0;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 25px;
 }
 
 .mainMenu li {
