--- a/src/components/MainSlider.module.css
+++ b/src/components/MainSlider.module.css
@@ -3,7 +3,7 @@
 .sliderContainer {
     position: relative;
     width: 100%;
-    height: 525px;
+    height: 545px;
     overflow: visible;
     max-width: 850px;
     /*border-radius: 8px;*/
@@ -54,7 +54,7 @@
     left: 0;
     right: 0;
     padding: 20px;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
+    background: rgba(38, 38, 38, 0.84);
     color: white;
     border-radius: 20px;
 
