--- a/src/components/StickyAds.module.css
+++ b/src/components/StickyAds.module.css
@@ -2,7 +2,6 @@
     position: relative;
     width: 100%;
     height: 0;
-    z-index: 1000;
 }
 
 .stickyAd {
@@ -12,7 +11,6 @@
     width: 160px;
     height: 600px;
     background-color: #f0f0f0;
-    z-index: 1000;
     cursor: pointer;
 }
 
@@ -35,7 +33,6 @@
     text-align: center;
     line-height: 20px;
     cursor: pointer;
-    z-index: 1001;
     border-radius: 50%;
 }
 
@@ -94,6 +91,7 @@
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     height: 100%;
+    position: relative;
 }
 
 @media (max-width: 1200px) {
